# negf-flow

./: .gitignore  README.md  pyproject.toml
example/api/: INPUT_ovp  flow-remote-negf.json  flow.json  local.env  negf.json  run.py
example/api/init_confs/: 10_0.vasp
example/custom_flow/: flow.json  local.env  mix.ep636.pth  press_band.py  run.py
negfflow/: __init__.py  args.py  flowgen.py
negfflow/flow/: negf.py
negfflow/op/: breakdown.py  build_supercell.py  dftio.py  get_overlap.py  prep_negf.py  prep_run_negf.py  prep_run_overlap.py  prep_run_relax.py  run_lmp_op.py  run_negf.py  run_negf_master.py
negfflow/op/overlap/: __init__.py  abacus.py
negfflow/op/relax/: __init__.py  prep_lammps.py  run_lammps.py
negfflow/utils/: artifact.py  executor.py  pack_files.py  run_command.py  safe_symlink.py  set_directory.py  wait_for_files.py
